<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/castle_kingdom"
    android:scaleType = "centerCrop"
    tools:context=".ui.CalculatorActivity">
<!--android:theme="@style/Theme.Calculator"-->

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Hello World!"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="bottom|end"/>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/key_1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_multiple"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_5"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_multiple"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_multiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_multiple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/key_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_divide"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_multiple" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_0"
        app:layout_constraintEnd_toStartOf="@+id/key_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_7"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_equal"
        app:layout_constraintStart_toEndOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_8"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_equal"
        app:layout_constraintEnd_toStartOf="@id/key_minus"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_9"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/key_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_equal"
        app:layout_constraintTop_toBottomOf="@id/key_divide"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/buttonRadius"
        android:text="@string/theme_select"
        app:layout_constraintTop_toBottomOf="@id/key_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>